Fixes issue with horizontal scrolling on ios

--- a/sass/modules.scss
+++ b/sass/modules.scss
@@ -173,7 +173,7 @@ aside.favorite {
   aside.favorite {
     position: absolute;
     top: 126px;
-    left: 65%;
+    left: 57%;
   }
 }
 
